# OpenGlCamera

./: .gitignore  README.md  settings.gradle  traces.txt
app/: build.gradle
app/src/androidTest/java/com/skateboard/cameratest/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/skateboard/cameratest/: MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/skateboard/cameratest/: ExampleUnitTest.kt
cameralib/: build.gradle
cameralib/src/androidTest/java/com/skateboard/cameralib/: ExampleInstrumentedTest.java
cameralib/src/main/: AndroidManifest.xml
cameralib/src/main/cpp/: CMakeLists.txt  VideoConvert.cpp
cameralib/src/main/java/com/skateboard/cameralib/: RecordActivity.kt  Test.kt
cameralib/src/main/java/com/skateboard/cameralib/codec/: AudioEncoder.kt  AudioEncoderCore.kt  AudioRecorder.kt  CameraRecorder.kt  CameraRecorderTest.kt  DataConvert.kt  MediaMuxerWrapper.kt  TextureAudioEncoder.kt  TextureMovieEncoder.kt  VideoEncoderCore.kt
cameralib/src/main/java/com/skateboard/cameralib/egl/: EglCore.kt  EglSurfaceBase.kt  WindowSurface.kt
cameralib/src/main/java/com/skateboard/jni/: DataConvert.kt
cameralib/src/main/res/layout/: activity_record.xml
cameralib/src/main/res/raw/: c_frag_shader.slgl  c_ver_shader.slgl  frag_shader.slgl  ver_shader.slgl
cameralib/src/main/res/values/: attrs.xml  strings.xml  styles.xml
cameralib/src/test/java/com/skateboard/cameralib/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
(+20 files in other folders)
